# CNKIBug

./: .gitignore  CNKIBug.py  CNKIBug_dev0.0.6.py  README.md  generate_version_info.py  pyproject.toml  requirements.txt  run.py  run_gui.py  version.txt  流程图.md
.github/workflows/: build.yml  test.yml
cnkibug/: browser_runtime.py  citation_fetcher.py  cnki_debug.py  cnki_guard.py  cnki_page.py  cnki_pagination.py  cnki_records.py  cnki_results.py  cnki_verify.py  environment.py  errors.py  estimate.py  exporter.py  keyword_import.py  keyword_scraper.py  runtime.py  scrape_logging.py  scrape_report.py  scrape_session.py  scrape_workflow.py  scraper.py  session_cache.py  settings.py  task_state.py  ui.py  version.py  window.py
cnkibug/app/: __init__.py  cli.py  console.py  environment.py  errors.py  events.py  prompts.py  report_view.py  runtime.py  ui.py
cnkibug/browser/: __init__.py  cache.py  runtime.py  session.py
cnkibug/cnki/: __init__.py  citation.py  details.py  guard.py  (+8 more)
docs/: configuration.md  development.md  usage.md
tests/: test_architecture.py  test_browser_runtime.py  test_citation_fetcher.py  test_cli.py  test_cnki_compat.py  test_cnki_details.py  test_cnki_page.py  test_cnki_pagination.py  test_cnki_records.py  test_dom_contract.py  test_estimate.py  test_exporter.py  test_gui.py  test_keyword_import.py  test_keyword_scraper.py  test_memory.py  test_prompts.py  test_run.py  test_runtime.py  test_scrape_report.py  test_scrape_workflow.py  test_session_cache.py  test_settings.py  test_task_state.py  test_ui.py  test_version.py  检索-中国知网1.html
(+25 files in other folders)
