[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cnkibug"
version = "0.2.1"
requires-python = ">=3.10"
dependencies = [
  "playwright==1.60.0",
  "openpyxl==3.1.5",
  "pywin32==311; sys_platform == 'win32'",
  "rich==15.0.0",
]

[tool.setuptools.packages.find]
include = ["cnkibug*"]
