[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cnkibug"
version = "0.4.0"
requires-python = ">=3.10,<3.15"
dependencies = [
  "playwright==1.60.0",
  "openpyxl==3.1.5",
  "pywin32==311; sys_platform == 'win32'",
  "rich==15.0.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
gui = [
  "ttkbootstrap==1.20.4",
]

[tool.setuptools.packages.find]
include = ["cnkibug*"]
